Prevent horizontal scroll + Prevent user select on accordions' summary + Add hover styles on footer links

--- a/assets/styles/components/_accordion.scss
+++ b/assets/styles/components/_accordion.scss
@@ -6,6 +6,7 @@
     position: relative;
     padding: .75em 0;
     list-style: none;
+    user-select: none; // Debatable
 
     &:before {
         content: 'View';
